alignment prob fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=Oleo+Script);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(http://fonts.googleapis.com/css?family=Ruluko);
 
 body {
-  font-family: 'Ruluko', sans-serif;
+/*  font-family: 'Ruluko', sans-serif;
+*/  
+  font-family: 'Roboto', sans-serif;
   margin: 0px auto;
   text-align: center;
   width: 700px;
@@ -18,7 +20,6 @@ body {
 
 .title {
   color: #F52F4F;
-  font-family: 'Oleo Script', cursive;
   font-size: 50px;
 }
 
@@ -30,6 +31,8 @@ body {
   margin: 10px;
   padding: 10px;
   width: 300px;
+  height: 250px;
+  vertical-align: top;
 }
 
 .balance {
@@ -47,7 +50,27 @@ body {
   color: #FFFFFF;
 }
 
+.message{
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+}
+
+.boxy {
+  vertical-align: top;
+}
+
 #logo {
-  margin: 40px;
+  margin: 20px auto;
+  text-align: center;
+  max-width: 300px;
+
+}
+
+#title {
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  margin: 40px 0 0 0;
+
 }
 
